--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "deploy": "gh-pages -d dist",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
@@ -16,7 +15,7 @@
   "bugs": {
     "url": "https://github.com/ethansnow2012/ethansnow2012.github.io/issues"
   },
-  "homepage": "https://ethansnow2012.github.io/",
+  "homepage": "https://ethansnow2012.github.io/ethansnow2012",
   "dependencies": {
     "gh-pages": "^3.1.0"
   }
