--- a/package.json
+++ b/package.json
@@ -1,23 +1,46 @@
 {
-  "name": "ethansnow2012.github.io",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "deploy": "gh-pages -d dist"
-    
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ethansnow2012/ethansnow2012.github.io.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/ethansnow2012/ethansnow2012.github.io/issues"
-  },
-  "homepage": "https://ethansnow2012.github.io/ethansnow2012",
+  "name": "gitblogv2",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "gh-pages": "^3.1.0"
+    "@testing-library/jest-dom": "^5.16.3",
+    "@testing-library/react": "^12.1.4",
+    "@testing-library/user-event": "^13.5.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-router-dom": "^6.2.2",
+    "react-scripts": "5.0.0",
+    "web-vitals": "^2.1.4"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "predeploy": "export REACT_APP_NODE_ENV=github_page && npm run build",
+    "deploy": "export REACT_APP_NODE_ENV=github_page && gh-pages -d build"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3",
+    "react-helmet": "^6.1.0",
+    "styled-components": "^5.3.5"
   }
 }
