--- a/package.json
+++ b/package.json
@@ -39,6 +39,10 @@
     ]
   },
   "devDependencies": {
+    "@chakra-ui/react": "^1.8.7",
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "framer-motion": "^5.6.0",
     "gh-pages": "^3.2.3",
     "react-helmet": "^6.1.0",
     "styled-components": "^5.3.5"
