--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@chakra-ui/react": "^1.8.7",
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
+    "@faker-js/faker": "^6.1.1",
     "framer-motion": "^5.6.0",
     "gh-pages": "^3.2.3",
     "react-helmet": "^6.1.0",
