--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "framer-motion": "^5.6.0",
     "gh-pages": "^3.2.3",
     "react-helmet": "^6.1.0",
+    "react-transition-group": "^4.4.2",
     "styled-components": "^5.3.5"
   }
 }
