--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "slate": "^0.76.1",
+    "slate-react": "^0.76.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
