chore: fix deploy cmd

--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
   "scripts": {
     "start": "env-cmd -f .env.local react-scripts start",
     "build": "env-cmd -f .env.local react-scripts build",
+    "build:production": "env-cmd -f .env.production react-scripts build",
     "test": "env-cmd -f .env.local react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "env-cmd -f .env.production npm run build",
+    "predeploy": "env-cmd -f .env.production npm run build:production",
     "deploy": "env-cmd -f .env.production gh-pages -d build"
   },
   "eslintConfig": {
