--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "env-cmd": "^10.1.0",
     "framer-motion": "^5.6.0",
     "gh-pages": "^3.2.3",
+    "puppeteer": "^13.5.2",
     "react-helmet": "^6.1.0",
     "react-transition-group": "^4.4.2",
     "styled-components": "^5.3.5"
