--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-scripts": "5.0.0",
     "slate": "^0.76.1",
     "slate-react": "^0.76.1",
+    "swiper": "^8.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
