--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
     "@faker-js/faker": "^6.1.1",
+    "aos": "^3.0.0-beta.6",
     "env-cmd": "^10.1.0",
     "framer-motion": "^5.6.0",
     "gh-pages": "^3.2.3",
