--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "gh-pages": "^3.2.3",
     "puppeteer": "^13.5.2",
     "react-helmet": "^6.1.0",
+    "react-icons": "^4.3.1",
     "react-transition-group": "^4.4.2",
     "styled-components": "^5.3.5"
   },
