--- a/package.json
+++ b/package.json
@@ -53,8 +53,11 @@
     "env-cmd": "^10.1.0",
     "framer-motion": "^5.6.0",
     "gh-pages": "^3.2.3",
+    "image-extensions": "^1.1.0",
+    "is-url": "^1.2.4",
     "puppeteer": "^13.5.2",
     "react-helmet": "^6.1.0",
+    "react-hot-toast": "^2.2.0",
     "react-icons": "^4.3.1",
     "react-transition-group": "^4.4.2",
     "styled-components": "^5.3.5"
