--- a/package.json
+++ b/package.json
@@ -6,14 +6,26 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "crypto": "^1.0.1",
+    "crypto-browserify": "^3.12.0",
+    "ethers": "^5.6.9",
+    "install": "^0.13.0",
+    "node-polyfill-webpack-plugin": "^2.0.0",
+    "npm": "^8.13.2",
     "react": "^18.0.0",
+    "react-app-rewired": "^2.2.1",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.2.2",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.1",
     "slate": "^0.76.1",
     "slate-react": "^0.76.1",
+    "stream": "0.0.2",
     "swiper": "^8.1.3",
-    "web-vitals": "^2.1.4"
+    "swr": "^1.3.0",
+    "wagmi": "^0.5.9",
+    "web-vitals": "^2.1.4",
+    "web3": "^0.20.5",
+    "web3-react": "^5.0.5"
   },
   "scripts": {
     "start": "env-cmd -f .env.local react-scripts start",
