--- a/package.json
+++ b/package.json
@@ -23,9 +23,7 @@
     "swiper": "^8.1.3",
     "swr": "^1.3.0",
     "wagmi": "^0.5.9",
-    "web-vitals": "^2.1.4",
-    "web3": "^0.20.5",
-    "web3-react": "^5.0.5"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "env-cmd -f .env.local react-scripts start",
