--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "crypto": "^1.0.1",
     "crypto-browserify": "^3.12.0",
+    "dompurify": "^3.1.3",
     "ethers": "^5.6.9",
     "install": "^0.13.0",
     "node-polyfill-webpack-plugin": "^2.0.0",
