--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "stream": "0.0.2",
     "swiper": "^8.1.3",
     "swr": "^1.3.0",
+    "three": "^0.135.0",
     "wagmi": "^0.5.9",
     "web-vitals": "^2.1.4"
   },
